# ora-global-website-scraper

./: Cargo.toml
data/: vestbee_funds.csv  vestbee_funds.xlsx  vestbee_funds_no_pagination.csv
issues/: VESTBEE_SCRAPER_RUST_PLAN.md
src/: csv_writer.rs  excel_writer.rs  main.rs  models.rs  scraper.rs
