[package]
name = "vestbee-scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
chromiumoxide = { version = "0.7", default-features = false, features = ["tokio-runtime"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1.3"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
scraper = "0.20"
reqwest = { version = "0.12", features = ["json"] }
rust_xlsxwriter = "0.64"
